--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
+    implementation 'org.greenrobot:eventbus:3.0.0'
 }
